@@ -466,10 +466,7 @@
       field type: mandatory - the name of a previously defined type from
       the <types> section indexed: true if this field should be indexed
       (searchable or sortable) stored: true if this field should be
-      retrievable compressed: [false] if this field should be stored
-      using gzip compression (this will only apply if the field type is
-      compressable; among the standard field types, only TextField and
-      StrField are) multiValued: true if this field may contain multiple
+      retrievable multiValued: true if this field may contain multiple
       values per document omitNorms: (expert) set to true to omit the
       norms associated with this field (this disables length
       normalization and index-time boosting for the field, and saves
